Improved Browser support and fixed scrollbar at slide 2

--- a/Aufgabe1/css/header.css
+++ b/Aufgabe1/css/header.css
@@ -6,7 +6,8 @@
 
     text-align: center;
 
-    background: linear-gradient(#000000EE, #000000AA), url("../../img/header.svg");
+    background-color: #000000;
+    background: linear-gradient(to bottom, rgba(0,0,0,0.95), rgba(0,0,0,0.75)),url("../../img/header.svg"),#000000;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -15,7 +16,8 @@
 @media screen and (min-width: 830px) {
     .title {
         height: calc(60vh - 30pt);
-        background: linear-gradient(#000000EE, #000000AA), url("../../img/header.svg");
+        background-color: #000000;
+        background: linear-gradient(to bottom, rgba(0,0,0,0.95), rgba(0,0,0,0.75)),url("../../img/header.svg"),#000000;
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
